--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -13,7 +13,7 @@ jobs:
         id: step1
         run: |
           TXT=$(npm install -g bats)
-          echo "text=$TXT" >> $GIHUB_ENV
+          echo "text=$TXT" >> $GITHUB_ENV
       - name: second
         id: step2
         run: |
