--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -13,10 +13,10 @@ jobs:
         id: step1
         run: |
           TXT=$(ls -la)
-          TXT="${TXT//'%'/'%25'}"
-          TXT="${TXT//$'\n'/'%0A'}"
-          TXT="${TXT//$'\r'/'%0D'}"
-          echo "text=$TXT" >> $GITHUB_ENV
+          delimiter="$(openssl rand -hex 8)"
+          echo "text<<${delimiter}" >> "${GITHUB_ENV}"
+          echo $TXT >> "${GITHUB_ENV}"
+          echo "${delimiter}" >> "${GITHUB_ENV}"
       - name: second
         id: step2
         run: |
