GITHUB_ENVに入れる前の変数をechoすると？

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,6 +10,7 @@ jobs:
         id: step1
         run: |
           TXT=$(ls -la)
+          echo $TXT
           delimiter="$(openssl rand -hex 8)"
           echo "text<<${delimiter}" >> "${GITHUB_ENV}"
           echo $TXT >> "${GITHUB_ENV}"
