github token入れるの忘れてた

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -16,6 +16,8 @@ jobs:
           echo "text<<${delimiter}" >> "${GITHUB_ENV}"
           echo $TXT >> "${GITHUB_ENV}"
           echo "${delimiter}" >> "${GITHUB_ENV}"
+        env:
+          GH_TOKEN: ${{ github.token }}
       - name: second
         id: step2
         run: |
