--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: first
         id: step1
+        permissions:
+          issue: write
         run: |
           gh issue create --title "Issue created from Github Action" --body "$(ls -la)"
           TXT=$(ls -la)
