--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,6 +1,8 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
+permissions:
+  issues: write
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
@@ -8,8 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: first
         id: step1
-        permissions:
-          issue: write
+
         run: |
           gh issue create --title "Issue created from Github Action" --body "$(ls -la)"
           TXT=$(ls -la)
