--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,11 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: first
         id: step1
-
         run: |
-          gh issue create --title "Issue created from Github Action" --body "$(ls -la)"
           TXT=$(ls -la)
-          echo $TXT
           gh issue create --title "Issue created from Github Action" --body "$TXT"
           delimiter="$(openssl rand -hex 8)"
           echo "text<<${delimiter}" >> "${GITHUB_ENV}"
@@ -26,3 +23,4 @@ jobs:
         id: step2
         run: |
           echo ${{ env.text }}
+          gh issue create --title "Issue created from Github Action step2" --body "${{ env.text }}"
